option('gtk_doc',
    type: 'boolean', value: false,
    description: 'Build API references (requires gtk-doc)')

option('introspection',
    type: 'boolean', value: true,
    description: 'Build introspection data (requires gobject-introspection)')

option('bashcompletiondir',
    type: 'string',
    description: 'directory for bash complection scripts ["no" disables]')

option('ufo_max_input_nodes',
    type: 'integer', value: 64,
    description: 'Maximum number of allowed input nodes for a task')
