option('gtk_doc',
    type: 'boolean', value: false,
    description: 'Build API references (requires gtk-doc)')

option('introspection',
    type: 'boolean', value: true,
    description: 'Build introspection data (requires gobject-introspection)')

option('bashcompletiondir',
    type: 'string',
    description: 'directory for bash complection scripts ["no" disables]')

option('ufo_max_input_nodes',
    type: 'integer', value: 64,
    description: 'Maximum number of allowed input nodes for a task')

option('with_tests',
    type: 'boolean', value: false,
    description: 'Specifies if tests are build.')

option('python',
    type : 'string',
    value : 'python3',
    description : 'Name of python executable')

option('oclfft', type: 'boolean', value: true,
    description: 'Build Apple OpenCL FFT')

option('contrib_filters', type: 'boolean', value: false,
    description: 'Build contributed filters')

option('lamino_backproject_burst_mode',
    type: 'combo',
    choices: ['1', '2', '4', '8', '16'],
    value: '16')
